tests/golden/type_errors/binary_number_operator_mismatch.cd
let x: number = 1 * "hello";
